--- a/scStore/src/app/core/header/header.component.html
+++ b/scStore/src/app/core/header/header.component.html
@@ -1,13 +1,13 @@
-<header>
+<header >
   <!-- header inner -->
-  <div class="header">
-    <div class="container-fluid">
+  <div class="header" >
+    <div class="container-fluid" [@headerAnimation]="headerState">
       <div class="row">
         <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
           <div class="full">
             <div class="center-desk">
               <div class="logo">
-               <img src="./assets/images/logoY.png" alt="#" />
+                <img src="./assets/images/logoY.png" alt="#" />
               </div>
             </div>
           </div>
