--- a/scStore/src/app/catalog/catalog/catalog.component.html
+++ b/scStore/src/app/catalog/catalog/catalog.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="titlepage">
-          <h2>Our Products</h2>
+          <h2>All Products</h2>
         </div>
       </div>
     </div>
