--- a/scStore/src/app/core/footer/footer.component.html
+++ b/scStore/src/app/core/footer/footer.component.html
@@ -1,14 +1,6 @@
 <footer>
-  <div class="footer">
-
-    <div class="copyright">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <p>© 2024 All Rights Reserved. Design by eternalmeg </p>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="footer" >
+    <p [@headerAnimation]="headerState" >© 2024 All Rights Reserved. Design by eternalmeg</p>
   </div>
 </footer>
+
