--- a/scStore/src/app/home/home/home.component.html
+++ b/scStore/src/app/home/home/home.component.html
@@ -1,31 +1,15 @@
 <section class="banner_main">
-  <div id="banner1" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-      <div class="carousel-item active">
-        <div class="container">
-          <div class="carousel-caption">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="text-bg">
-                  <span>Computers And Laptops</span>
-                  <h1></h1>
-                  <p>Connecting people and devices – buy or sell your laptop or computer here! </p>
-                  <a routerLink="/catalog">Browse products</a>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="text_img">
-                  <figure><img src="./assets/images/pct.png" alt="#"/></figure>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="text-bg">
+        <p>Connecting people and devices – buy or sell your device here! </p>
+        <a routerLink="/catalog">Browse products</a>
       </div>
-
-
-
     </div>
-
+    <div class="col-md-6">
+      <div class="text_img">
+        <figure><img src="./assets/images/pct.png" alt="#"/></figure>
+      </div>
+    </div>
   </div>
 </section>
