--- a/scStore/src/app/user/edit-offer/edit-offer.component.html
+++ b/scStore/src/app/user/edit-offer/edit-offer.component.html
@@ -5,27 +5,60 @@
 
 
     <form #form="ngForm" (ngSubmit)="submitHandler()">
-      <div class="header">
+      <div class="form-header">
         <h3>Edit your offer here</h3>
 
       </div>
       <div class="fields">
 
-      <div class="field">
-        <input type="text" id="brand" name="brand" ngModel #brand="ngModel">
-      </div>
-      <div class="field">
-        <input type="text" id="model" name="model" ngModel #model="ngModel">
-      </div>
-      <div class="field">
-        <textarea type="text" id="description" name="description" ngModel #description="ngModel"></textarea>
-      </div>
-      <div class="field">
-        <input type="text" id="price" name="price" ngModel #price="ngModel">
-      </div>
-      <div class="field">
-        <input type="text" id="image" name="image" ngModel #price="ngModel">
-      </div>
+        <div class="field">
+          <input type="text" id="brand" name="brand" placeholder="brand" ngModel #brand="ngModel"  required value=""  [@fieldAnimation]="brand.touched && brand.invalid ? 'invalid' : 'valid'">
+          <div class="error" *ngIf="brand.touched">
+            <div *ngIf="brand.errors?.['required']">
+              Brand is required!
+            </div>
+          </div>
+        </div>
+        <div class="field">
+          <input type="text" id="model" name="model" placeholder="model" ngModel #model="ngModel" required value=""  [@fieldAnimation]="model.touched && model.invalid ? 'invalid' : 'valid'">
+          <div class="error" *ngIf="model.touched">
+            <div *ngIf="model.errors?.['required']">
+              Model is required!
+            </div>
+          </div>
+        </div>
+        <div class="field">
+       <textarea
+         id="description"
+         name="description"
+         placeholder="Description"
+         ngModel
+         #description="ngModel"
+         required
+         [@fieldAnimation]="description.touched && description.invalid ? 'invalid' : 'valid'">
+  </textarea>
+          <div class="error" *ngIf="description.touched">
+            <div *ngIf="description.errors?.['required']">
+              Description is required!
+            </div>
+          </div>
+        </div>
+        <div class="field">
+          <input type="text" id="price" name="price" placeholder="price" ngModel #price="ngModel" required value=""  [@fieldAnimation]="price.touched && price.invalid ? 'invalid' : 'valid'">
+          <div class="error" *ngIf="price.touched">
+            <div *ngIf="price.errors?.['required']">
+              Price is required!
+            </div>
+          </div>
+        </div>
+        <div class="field">
+          <input type="text" id="image" name="image" placeholder="image URL" ngModel #image="ngModel" required value=""  [@fieldAnimation]="image.touched && image.invalid ? 'invalid' : 'valid'">
+          <div class="error" *ngIf="image.touched">
+            <div *ngIf="image.errors?.['required']">
+              Image is required!
+            </div>
+          </div>
+        </div>
         <div class="button">
           <input type="submit" class="btn" value="Edit Product" />
         </div>
@@ -38,4 +71,4 @@
 
 
   </div>
-  </div>
+</div>
