--- a/scStore/src/app/user/profile/profile.component.css
+++ b/scStore/src/app/user/profile/profile.component.css
@@ -1,71 +1,19 @@
-.three_box1 {
-  background: url(/assets/images/contact_g.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-
-
-
-  padding: 143px 0 90px 0;
-
-
-  display: block;
-  justify-content: center;
-  width: 100%;
-
-}
-.three_box1 h3 {
-  font-style: italic;
+.box_text a {
+  color: #48ca95;
 }
 
-.box_text_test {
-  background:whitesmoke;
-text-align: center;
-  padding: 50px 20px 20px 20px;
-  border: #48ca95 solid 1px;
-  border-radius: 15px;
-  margin-bottom: 90px;
-  width:100% ;
-  margin-top: 100px;
-
-
-}
-
-.box_text_test h3 {
-  color: black;
-  font-size: 20px;
-  line-height: 22px;
-  font-weight: bold;
-  padding-bottom: 25px;
-}
-
-.box_text_test p {
-  font-size: 17px;
-  color: black;
-  line-height: 30px;
-}
-
-.box_text_test i {
-  padding-bottom: 25px;
-  margin-bottom: 40px;
-  display: block;
-}
-span {
-  color:  #48ca95;
-}
 
 .edit-btn {
   font-size: 22px;
   transition: ease-in all 0.5s;
   background-color: #48ca95;
-
   color: #fff;
-  padding: 10px 0px;
+  padding:0 5px;
   max-width:150px;
   width: 100%;
   display: block;
-
   margin: 50px auto;
-  border-radius: 30px;
+  border-radius: 10px;
   font-weight: 500;
 }
 
@@ -78,166 +26,9 @@ span {
 .profile-btn {
   display: flex;
   flex-direction: row;
-
 }
-
-.computer-reg {
-
-}
-.header {
-  background-color: transparent;
-}
-.header h3 {
-  font-size: 2em;
-}
-.register{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  padding-top: 100px;
-
-}
-.header {
-  background-color: transparent;
-}
-.header h3 {
-  font-size: 2em;
-  color: whitesmoke;
-}
-.register{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  padding-top: 100px;
-
-}
-.register form{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 50em;
-  border: 1px solid;
-
-  color: whitesmoke;
-  min-height: 20em;
-  border-radius: 1em;
-  padding: 1em 0;
-}
-.register form .header{
-  position: relative;
-  text-align: center;
-
-}
-.register form app-error-message{
-  position: absolute;
-}
-.register form h3{
-  font-size: 2em;
-  text-transform: uppercase;
-  margin-bottom: 0;
-
-}
-
-.register form .fields{
-  display: flex;
-  flex-direction: column;
-  gap: 2em;
-}
-.register form .fields .field{
-  background-color: transparent;
-  display: flex;
-  gap: 2em;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-
-}
-.register form .fields .field {
-  font-size: 16px;
-  font-weight: bolder;
-}
-.register form .fields .field input::placeholder {
-  text-align: center;
-}
-
-.register form .fields .field input{
-  text-align: center;
-  background-color:  transparent;
-  color: whitesmoke;
-  min-width: 15em;
-  min-height: 2em;
-  border: none;
-  border-bottom: 1px solid whitesmoke;
-  /* Цветът на текста */
-  transition: background-color 0.3s ease, color 0.3s ease;
-
-}
-
-.register form .fields .field input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active{
-  background-color: transparent !important; /* Прозрачен фон */
-  -webkit-text-fill-color: whitesmoke !important; /* Цветът на текста */
-  border-bottom: 1px solid whitesmoke !important; /* Запазване на рамката */
-  -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
-  transition: background-color 5000s ease-in-out 0s;/* Премахване на autofill фон */
-  box-shadow: 0 0 0 1000px transparent inset !important; /* Съвместимост */
-}
-
-
-
-.button {
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  gap: 15px;
-
-}
-.button input {
-  border-radius: 30px;
-}
-
-.register form .fields .button input{
-  background-color: transparent;
-  color: whitesmoke;
-  border: 2px solid whitesmoke;
-  padding: 0.5em 1em;
-  font-size: 1.5em;
-}
-.register form .fields .button input:hover{
-  background-color:#34ce57;
-  color: white;
-  border-color: white;
-  cursor: pointer;
-}
-
-h5 {
-  font-style: italic;
-  font-size: 1em;
-  font-weight: normal;
-}
-h5 a {
-  color: #34ce57;
-  font-size: 1em;
-}
-
-.error{
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  font-style: italic;
-  width: 100%;
-  text-align: center;
-  top: 2.2em;
-  left: 0em;
-  color: red;
-}
-.contact {
-  padding-bottom: 302px;
+.register form .fields .button input {
+  margin-right: 5px;
 }
 
 
