--- a/scStore/src/app/user/user-offers/user-offers.component.css
+++ b/scStore/src/app/user/user-offers/user-offers.component.css
@@ -5,9 +5,8 @@ button {
   line-height: 20px;
   background-color: #252525;
   font-weight: 500;
-  margin: 0 auto;
   padding: 10px 0;
-  margin-top: 10px;
+  margin: 10px auto 0;
   transition: ease-in all 0.5s;
 }
 
@@ -30,6 +29,10 @@ button:hover {
 }
 .no-products {
   color: red;
+  font-size: 50px;
+  text-align: center;
+  font-style: italic;
+  background-color: transparent;
 
 }
 
@@ -42,9 +45,7 @@ img {
   border-radius: 5px;
 }
 
-.products {
-  padding-bottom: 542px;
-}
+
 
 
 
