--- a/scStore/src/styles.css
+++ b/scStore/src/styles.css
@@ -29,12 +29,31 @@ html {
 }
 
 body {
-  color: #666666;
+  height: 100%;
   font-size: 14px;
   font-family: 'Poppins', sans-serif;
   line-height: 1.80857;
   font-weight: normal;
+
 }
+
+body:before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image:  url("assets/images/bg3.jpg") ;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  z-index: -1;
+  opacity: 69%}
+
+
+
 
 a {
   color: #1f1f1f;
@@ -229,69 +248,11 @@ button {
 /**-- heading section --**/
 
 
-/*---------------------------- preloader area ----------------------------*/
 
-.loader_bg {
-  position: fixed;
-  z-index: 9999999;
-  background: #fff;
-  width: 100%;
-  height: 100%;
-}
-
-.loader {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.loader img {
-  width: 280px;
-}
-
-ul.btn {
-  float: right;
-}
-
-ul.btn li {
-  display: inline-block;
-  padding: 0 25px;
-}
-
-ul.btn li a {
-  color: #fff;
-  font-size: 16px;
-}
-
-ul.btn li:last-child {
-  padding-right: 0;
-}
-
-.login_btn {
-  padding-left: 50px;
-}
-
-.login_btn a {
-  background-color: #fff;
-  display: inline-block;
-  padding: 7px 35px;
-  border-radius: 10px;
-  color: #292e39 !important;
-  font-size: 17px;
-}
-
-.login_btn a:hover {
-  color: #fff !important;
-  background: #0808ff;
-}
 
 
 /*-- header area --*/
+
 
 
 /*--------------------------------------------------------------------- top banner area ---------------------------------------------------------------------*/
@@ -301,7 +262,13 @@ ul.btn li:last-child {
 
 
 /*-- navigation--*/
+.container-fluid {
+  background-color: red;
+  width: 80%;
+  border: 1px solid whitesmoke;
+  border-radius: 10px;
 
+}
 .navigation.navbar {
   float: right;
   padding-top: 31px !important;
@@ -353,10 +320,11 @@ ul.btn li:last-child {
 
 .header {
   width: 100%;
-  padding: 30px 30px;
+  padding: 0 30px;
   background: transparent;
-  position: absolute;
-  z-index: 999;
+  position: fixed;
+  z-index: 100;
+  transition: background 0.3s ease, box-shadow 0.3s ease;
 
 }
 
@@ -372,10 +340,9 @@ ul.btn li:last-child {
 /** banner section **/
 
 .banner_main {
-  background: url(./assets/images/banner.jpg);
-  background-repeat: no-repeat;
+
   min-height: 900px;
-  background-size: 100% 100%;
+
   display: flex;
   justify-content: center;
   align-content: center;
@@ -402,7 +369,7 @@ ul.btn li:last-child {
   left: 38px;
 }
 .text-bg {
-  text-align: left;
+  text-align: center;
 }
 
 .text-bg h1 {
@@ -413,20 +380,14 @@ ul.btn li:last-child {
   font-weight: bold;
 }
 
-.text-bg span {
-  color: #fff;
-  font-size: 42px;
-  line-height: 50px;
-  font-weight: normal;
-  padding-bottom: 18px;
-  display: block;
-}
 
 .text-bg p {
   line-height: 28px;
   font-weight: 500;
   padding-bottom: 60px;
   display: block;
+  color: whitesmoke;
+  font-size: 18px;
 }
 
 .text-bg figure img {
@@ -446,36 +407,6 @@ ul.btn li:last-child {
   width: 100%;
 }
 
-.carousel-caption {
-  position: inherit;
-}
-
-#banner1 .carousel-inner {
-  padding-right: 130px;
-}
-
-#banner1 .carousel-indicators {
-  left: inherit;
-  bottom: 40px;
-}
-
-#banner1 .carousel-indicators li {
-  width: 20px;
-  height: 20px;
-  border-radius: 20px;
-  background: #48ca95;
-  margin-right: 5px;
-  margin-left: 5px;
-}
-
-#banner1 .carousel-indicators li.active {
-  background: #ffffff;
-}
-
-#banner1 a.carousel-control-next,
-#banner1 a.carousel-control-prev {
-  display: none;
-}
 
 .text-bg a {
   font-size: 17px;
@@ -490,6 +421,7 @@ ul.btn li:last-child {
   display: inline-block;
   transition: ease-in all 0.5s;
   margin-right: 10px;
+  border-radius: 10px;
 }
 
 .text-bg a:hover {
@@ -532,7 +464,7 @@ ul.btn li:last-child {
   font-size: 17px;
   background-color: #48ca95;
   color: #fff !important;
-  padding: 13px 0px;
+  padding: 0px 0px;
   width: 100%;
   max-width: 190px;
   text-align: center;
@@ -551,12 +483,14 @@ ul.btn li:last-child {
 /** three_box section **/
 
 .three_box {
-  background-color: #fff;
-  padding-top: 90px;
+  padding: 143px 0 90px 0;
+  display: block;
+  justify-content: center;
+  width: 100%;
 }
 
 .box_text {
-  background: #fff;
+  background: transparent;
   text-align: center;
   padding: 50px 20px 20px 20px;
   border: #48ca95 solid 1px;
@@ -564,17 +498,22 @@ ul.btn li:last-child {
 }
 
 .box_text h3 {
-  color: #121010;
+  color: whitesmoke;
   font-size: 20px;
   line-height: 22px;
   font-weight: bold;
   padding-bottom: 25px;
+  font-style: italic;
 }
 
 .box_text p {
   font-size: 17px;
-  color: #050505;
+  color: whitesmoke;
   line-height: 30px;
+}
+
+.box_text a {
+  color: #48ca95;
 }
 
 .box_text i {
@@ -589,16 +528,14 @@ ul.btn li:last-child {
 /** products section **/
 
 .products {
-  background: url(./assets/images/contact_g.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+
 
 
   padding: 143px 0 90px 0;
 }
 
 .our_products {
-  background-color: #fff;
+
   padding: 90px 0;
 }
 
@@ -637,10 +574,10 @@ ul.btn li:last-child {
   display: block;
   margin-top: 50px;
   background-color:#48ca95;;
-  border-radius: 30px;
+  border-radius: 10px;
   color:whitesmoke !important;
   max-width: 232px;
-  padding: 15px 0;
+  padding: 0 0;
 }
 
 .our_products .read_more:hover {
@@ -658,7 +595,7 @@ ul.btn li:last-child {
 .laptop {
   font-family: 'Dosis', sans-serif;
   padding: 130px 0;
-  background-color: #4f4aa6;
+
 }
 
 .laptop .titlepage {
@@ -711,9 +648,7 @@ ul.btn li:last-child {
 /** contact section **/
 
 .contact {
-  background: url(./assets/images/contact_g.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+
   padding: 90px 0;
 }
 
@@ -787,124 +722,22 @@ ul.btn li:last-child {
 /** footer **/
 
 .footer {
-  background: url(/assets/images/footer.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  padding-top: 115px;
+
   text-align: center;
-
-}
-
-.footer .titlepage {
-  text-align: left;
-  padding-bottom: 0px;
-}
-
-.footer .titlepage h2 {
-  color: #fff;
-  margin: inherit;
-  border-bottom: #fff solid 1px;
-}
-
-.logo1 {
-  float: left;
-  margin-top: -30px;
-}
-
-ul.social_icon {
-  padding-top: 37px;
+  position: fixed;
   width: 100%;
-  float: left;
-  text-align: left;
+  bottom: 0;
+  background: red;
+
 }
 
-ul.social_icon li {
-  display: inline-block;
-}
 
-ul.social_icon li a {
-  background: #fff;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 25px;
-  border-radius: 30px;
-  margin: 0 3px;
-}
 
-ul.social_icon li a:hover {
-  background-color: #48ca95;
-  color: #fff;
-}
 
-.footer h3 {
-  font-weight: 600;
-  font-size: 25px;
-  line-height: 25px;
-  text-align: left;
-  color: #fff;
-  padding-bottom: 15px;
-}
 
-.about_us li {
-  color: #fff;
-  font-size: 17px;
-  text-align: left;
-}
-
-.conta li {
-  color: #fff;
-  font-size: 17px;
-  text-align: left;
-}
-
-.bottom_form h3 {
-  font-weight: 600;
-  font-size: 25px;
-  line-height: 25px;
-  text-align: left;
-  color: #fff;
-  padding-bottom: 15px;
-}
-
-.bottom_form .enter {
-  border: inherit;
-  padding: 0px 19px;
-  width: 100%;
-  height: 45px;
-  background: #fffffff2;
-  color: #ccc8c8;
-  font-size: 17px;
-  font-weight: 600;
-  float: left;
-  border-radius: 10px;
-  margin-bottom: 20px;
-}
-
-.sub_btn {
-  font-size: 17px;
-  transition: ease-in all 0.5s;
-  background-color: #48ca95;
-  color: #fff;
-  padding: 10px 0px;
-  max-width: 147px;
-  border-radius: 10px;
-  width: 100%;
-  display: block;
-  font-weight: 500;
-  text-transform: uppercase;
-}
-
-.sub_btn:hover {
-  background-color: #000;
-  transition: ease-in all 0.5s;
-  color: #fff;
-}
 
 .copyright {
-  margin-top: 80px;
+
   padding-bottom: 20px;
 }
 
@@ -1007,6 +840,147 @@ ul.social_icon li a:hover {
 .laptop1_img figure img {
   width: 100%;
 }
+
+/**register **/
+.form-header {
+  background-color: transparent;
+}
+
+.register{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding-top: 100px;
+
+}
+.register form{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 50em;
+  border: 1px solid whitesmoke;
+  min-height: 20em;
+  border-radius: 1em;
+  padding: 1em 0;
+}
+.register form .header{
+  position: relative;
+  text-align: center;
+
+
+}
+.register form app-error-message{
+  position: absolute;
+}
+.register form h3{
+  font-size: 2em;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  color: black;
+
+
+}
+
+.register form .fields{
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+}
+.register form .fields .field{
+  background-color: transparent;
+  display: flex;
+  gap: 2em;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  font-size: 16px;
+
+}
+
+.register form .fields .field input::placeholder {
+  text-align: center;
+  color: #48ca95;
+}
+
+.register form .fields .field input{
+  text-align: center;
+  background-color:  transparent;
+  color: whitesmoke;
+  min-width: 15em;
+  min-height: 2em;
+  border: none;
+  border-bottom: 1px solid whitesmoke;
+  transition: background-color 0.3s ease, color 0.3s ease;
+
+}
+
+.register form .fields .field input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active{
+  background-color: transparent !important; /* Прозрачен фон */
+  -webkit-text-fill-color: whitesmoke !important; /* Цветът на текста */
+  border-bottom: 1px solid whitesmoke !important; /* Запазване на рамката */
+  -webkit-box-shadow: 0 0 0 1000px transparent inset !important;
+  transition: background-color 5000s ease-in-out 0s;/* Премахване на autofill фон */
+  box-shadow: 0 0 0 1000px transparent inset !important; /* Съвместимост */
+}
+
+
+
+.button {
+  text-align: center;
+  padding-top: 20px;
+}
+.button input {
+  border-radius: 10px;
+}
+
+.register form .fields .button input{
+  background-color: transparent;
+  color: whitesmoke;
+  border: 2px solid whitesmoke;
+  padding: 0 20px;
+  font-size: 1.5em;
+}
+.register form .fields .button input:hover{
+  background-color:#34ce57;
+  color: white;
+  border-color: white;
+  cursor: pointer;
+}
+
+h5 {
+  font-style: italic;
+  font-size: 1em;
+  font-weight: normal;
+}
+h5 a {
+  color: #34ce57;
+  font-size: 1em;
+}
+
+.error{
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  font-style: italic;
+  width: 100%;
+  text-align: center;
+  top: 2.2em;
+  left: 0em;
+  color: red;
+}
+
+span {
+  position: absolute;
+  right: 10%;
+  bottom: 10%;
+}
+
+
 
 
 /** end laptop **/
