--- a/scStore/src/app/catalog/details/details.component.css
+++ b/scStore/src/app/catalog/details/details.component.css
@@ -25,7 +25,8 @@
   gap: 10px;
   width: 50%;
   min-height: 400px;
-  align-items: stretch;
+  align-items: center;
+  text-align: center;
 }
 
 .info-cell {
@@ -71,6 +72,7 @@
   margin-top: auto;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 
@@ -85,9 +87,11 @@
 .container {
   display: flex;
   flex-direction: row;
-  border: #48ca95 solid 1px;
-  border-radius: 15px;
-  background-color: transparent;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 12px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(5px);
+  border: 1px;
 
 
 }
