--- a/scStore/src/app/core/footer/footer.component.css
+++ b/scStore/src/app/core/footer/footer.component.css
@@ -7,12 +7,13 @@
 
 
 .footer p {
-  background-color: #8394c7;
-  border: 1px solid whitesmoke;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 12px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   color: #fff;
   font-size: 16px;
   width: 80%;
   margin: 0 auto;
   padding: 10px;
-  border-radius: 5px;
+
 }
