--- a/scStore/src/app/catalog/search/search.component.css
+++ b/scStore/src/app/catalog/search/search.component.css
@@ -31,7 +31,7 @@ input {
 button {
   padding: 10px 15px;
   border: none;
-  background-color: #007bff;
+  background-color: #48ca95;
   color: white;
   border-radius: 4px;
   cursor: pointer;
