--- a/scStore/src/app/features/cart/cart.component.html
+++ b/scStore/src/app/features/cart/cart.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-6">
         <div class="titlepage">
           <p>Every Computer and laptop</p>
-          <h2>Up to 40% off !</h2>
+          <h2>Checked by professionals. Ready for a new home.</h2>
           <div class="buttons" style="display: flex">
             <a class="read_more" (click)="buyHandler()">Buy</a>
             <a class="read_more" routerLink="/catalog">Back</a>
