--- a/scStore/src/app/features/seller-info/seller-info.component.css
+++ b/scStore/src/app/features/seller-info/seller-info.component.css
@@ -22,7 +22,7 @@ table td{
 .clear-btn {
   width: 50%;
   border: 1px solid whitesmoke;
-  border-radius: 30px;
+  border-radius: 4px;
   background-color: transparent;
   color: whitesmoke;
 }
@@ -35,3 +35,34 @@ a {
   font-style: italic;
   font-size: 18px;
 }
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачен фон */
+  z-index: 1000; /* Уверява се, че модалът е над всички елементи */
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 50%;
+  max-width: 500px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  position: relative;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
