--- a/scStore/src/app/user/profile/profile.component.css
+++ b/scStore/src/app/user/profile/profile.component.css
@@ -13,7 +13,7 @@
   width: 100%;
   display: block;
   margin: 50px auto;
-  border-radius: 10px;
+  border-radius: 4px;
   font-weight: 500;
 }
 
@@ -30,6 +30,16 @@
 .register form .fields .button input {
   margin-right: 5px;
 }
+
+.red {
+  color: red;
+  font-weight: bold;
+}
+
+.green {
+  color: green;
+}
+
 
 
 
